2009-05-15  Chris Toshok  <toshok@ximian.com>

	* ScriptableObjectWrapper.cs (ValidateArguments): don't deref
	nulls.
	(InvokeFromUnmanaged): same.

2009-05-15  Andreia Gaita  <avidigal@novell.com>

	* HtmlWindow.cs: Clean up some calls

2009-04-24  Sebastien Pouliot  <sebastien@ximian.com>

	* ScriptObject.cs: handle field should not be visible.

2009-04-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* HtmlObject.cs:
	* ScriptableObjectWrapper.cs: Generate all P/Invoke methods.

2009-04-07  Chris Toshok  <toshok@ximian.com>

	* HtmlWindow.cs: use string.IsNullOrEmpty instead of just checking
	null then assuming string[0] is valid.

2009-04-03  Sebastien Pouliot  <sebastien@ximian.com>

	* HtmlPage.cs: Do not let the "major" properties be usable if 
	EnableHTMLAccess (from the plugin properties) is false.

2009-04-02  Aaron Bockover  <abockover@novell.com>

	* ScriptObject.cs: Add [CLSCompliant (false)] attr to Dispatched to avoid
	gmcs 2.0.1 throwing an error when it should throw a warning

2009-04-01  Andreia Gaita  <avidigal@novell.com>

	* ScriptableObjectWrapper.cs, HtmlObject.cs, HtmlEventArgs.cs: 
	Include the native DOM object (wrapped as a npobj) in the DomEvent 
	callback handler and store it so it can called later by user code.
	Implement StopPropagation, PreventDefault and EventObject.

        * ScriptObject.cs: Remove unused code      

2009-03-31  Jb Evain  <jbevain@novell.com>

	* HtmlObject.cs: adjust to the change in DomEventCallback where
	keyCode and charCode have been added.

2009-03-27  Andreia Gaita  <avidigal@novell.com>

	* HtmlWindow.cs: Implement CreateInstance

2009-03-25  Geoff Norton  <gnorton@novell.com>

	* HtmlWindow.cs: Don't pass managed objects into the mozilla code,
	and lets not open a new window for an api that requests that we 
	stay in the same window.

2009-03-25  Andreia Gaita  <avidigal@novell.com>

	* ScriptableObjectWrapper.cs: validation was the wrong way around, 
	fix and make it clear which type it is we're checking
