@@ -1,3 +1,10 @@
+2009-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* plugin.h: Add a GetBrowserHost which returns a void* to avoid
+	putting NPObject/mozilla headers in the c bindings.
+
+	* cbinding.cpp|cbinding.h: Regenerated.
+
 2009-05-17  Andreia Gaita  <avidigal@novell.com>
 
 	* plugin-class.cpp: If a managed method called from js returns
